--- a/style.css
+++ b/style.css
@@ -1,8 +1,31 @@
 h1 {
-    color: blueviolet;
+    color: navy;
+}
+
+body {
+    margin: 50px;
+    padding-left: 100px;
+    padding-bottom: 100px;
+    padding-right: 100px;
+    box-shadow: red;
+}
+
+h1 {
+    text-align: center;
+    font-size: 70px;
+    padding-bottom: 40px;
 }
 
 img {
-    width: 250px;
-    height: 175px;
+    width: 325px;
+    height: 290px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 35px;
+  padding-bottom: 35px;
+}
+
+p {
+    padding-bottom: 35px;
 }
