--- a/style.css
+++ b/style.css
@@ -3,17 +3,22 @@ h1 {
 }
 
 body {
-    margin: 50px;
+    margin: 0px;
     padding-left: 100px;
     padding-bottom: 100px;
     padding-right: 100px;
-    box-shadow: red;
 }
 
 h1 {
     text-align: center;
     font-size: 70px;
-    padding-bottom: 40px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+h2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 img {
@@ -27,5 +32,5 @@ img {
 }
 
 p {
-    padding-bottom: 35px;
+    padding-bottom: 50px;
 }
