--- a/Css/style.css
+++ b/Css/style.css
@@ -36,19 +36,28 @@ picture {
 img {
     width: 225px;
     height: auto;
+    border-radius: 45%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-top: 85px;
     padding-bottom: 35px;
+    
 }
 
+.icon1 {
+    padding-right: 5px;
+}
+/* .icon1 {
+    padding-right: 20px;
+} */
 
 
-.card-img-top {
+/* .card-img-top {
     width: 50px;
     height: 30px;
     object-fit: cover;
-}
+    border-radius: 10px;
+} */
 
 
