--- a/Css/style.css
+++ b/Css/style.css
@@ -34,9 +34,8 @@ picture {
 /* CARD STYLING */
 
 img {
-    width: 225px;
+    width: 205px;
     height: auto;
-    border-radius: 45%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -45,16 +44,15 @@ img {
     
 }
 
-.icon1 {
-    padding-right: 5px;
-}
-
 .card-title {
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 55px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 45px;
    color: navy;
 }
 
+ .icon4 {
+    padding-left: 15px;
+}
 
 /* .icon1 {
     padding-right: 20px;
