--- a/Css/style.css
+++ b/Css/style.css
@@ -26,9 +26,11 @@ h2 {
 }
 
 /* picture {
-
     height: 50px;
 } */
+
+
+
 
 /* CARD STYLING */
 
@@ -46,23 +48,10 @@ h2 {
 .card-title {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 45px;
-   color: navy;
+   color: rgb(6, 9, 84);
 }
 
 .btnSVG {
     height: 40px;
 }
-
-/* .icon1 {
-    padding-right: 20px;
-} */
-
-
-/* .card-img-top {
-    width: 50px;
-    height: 30px;
-    object-fit: cover;
-    border-radius: 10px;
-} */
-
 
