--- a/Css/blog.style.css
+++ b/Css/blog.style.css
@@ -16,11 +16,6 @@ body {
     background-color: rgb(222, 201, 173);
 }
 
-.topBar {
-    size: 20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 .frame {
     border: 5px solid rgb(13, 12, 12);
     /* padding: 20px; */
@@ -29,7 +24,26 @@ body {
     margin-bottom: 60px;
 }
 
+nav {
+    font-size: 25px;
+    padding-bottom: 10px;
+    font-family: monospace;
+    color: black;
+}
+
+/* contact */
+
 .btnSVG {
     padding: 20px;
 
+}
+
+.btnSVG2 {
+    height: 50px;
+    padding-right: 100px;
+    padding-left: 100px;
+}
+
+.frameContact{
+    margin-top: 120px;
 }
