--- a/Css/blog.style.css
+++ b/Css/blog.style.css
@@ -15,14 +15,15 @@ body {
     margin: 20 px;
     padding: 30 px;
     /* background-color: rgb(222, 201, 173); */
-    background-image: linear-gradient(to bottom right, rgb(222, 201, 173), rgb(237, 236, 230), rgb(225, 145, 34));
-    min-height: 100vh;
+    /* background-image: linear-gradient(to bottom right, rgb(222, 201, 173), rgb(237, 236, 230), rgb(225, 145, 34)); */
+    /* min-height: 100vh; */
 }
 
 
 .frame {
     border: 2px solid rgb(13, 12, 12);
-    box-shadow: 0 0 0 8px rgb(190, 117, 45);
+    box-shadow: 0 0 0 6px rgb(190, 117, 45);
+    background-image: linear-gradient(to bottom right, rgb(222, 201, 173), rgb(237, 236, 230), rgb(240, 175, 84));
     /* padding: 20px; */
     margin-left: 90px;
     margin-right: 90px;
@@ -75,14 +76,14 @@ a:active { text-decoration: none; color: black;}
     border-radius: 40%;
     text-align: center;
     padding-bottom: 10px;
-    border: 3px solid rgb(13, 12, 12);
+    border: 2px solid rgb(13, 12, 12);
     box-shadow: 0 0 0 12px rgb(242, 240, 242);
 
 }
 
 h1 {
 text-align: center;
-font-family: monospace;
+font-family:monospace;
 padding-top: 20px;
 padding-bottom: 20px;
 }
