changes to homepage

--- a/Css/blog.style.css
+++ b/Css/blog.style.css
@@ -33,7 +33,7 @@ body {
 }
 
 nav {
-    font-size: 20px;
+    font-size: 25px;
     padding-bottom: 20px;
     font-family: monospace;
     color: black;
@@ -43,7 +43,7 @@ a:link { text-decoration: none; color: black;}
 
 a:visited { text-decoration: none; color: black;}
 
-a:hover { text-decoration: none; color: rgb(241, 229, 215);}
+a:hover { text-decoration: none; color: rgb(219, 55, 14);}
 
 a:active { text-decoration: none; color: black;}
 
@@ -51,8 +51,8 @@ h2 {
     font-family: monospace;
 }
 
-.card-header {
-    font-size: 20px;
+.CardHeader {
+    font-size: 30px;
     font-family: monospace;
     color: rgb(106, 104, 100);
 }
@@ -61,7 +61,6 @@ h2 {
 
 .btnSVG {
     padding: 20px;
-    height: 20px;
 
 }
 
@@ -85,7 +84,7 @@ h2 {
 }
 
 .card {
-    border-radius: 40%;
+    /* border-radius: 40%; */
     text-align: center;
     padding-bottom: 10px;
     border: 2px solid rgb(13, 12, 12);
