--- a/Css/blog.style.css
+++ b/Css/blog.style.css
@@ -105,3 +105,11 @@ padding-bottom: 20px;
     background-size: cover;
 
 } */
+
+
+/* BIO */
+
+.bioParagraph {
+    font-size: 20px;
+    font-family: monospace;
+}
