--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -1,50 +1,65 @@
+@media (min-width: 768px) {
+  /* Styles for tablets and desktops */
+  .homePagePic {
+    max-width: 600px;
+  }
+  .homePagePic1 {
+    max-width: 350px;
+  }
+  .bioParagraph {
+    font-size: 1.5rem;
+  }
+  .nav {
+    font-size: 1.5rem;
+  }
+  .CardHeader {
+    font-size: 3rem;
+  }
+  .btnSVG {
+    padding: 2%;
+  }
+  .btnSVG2 {
+    max-width: 500px;
+  }
+  h1 {
+    font-size: 3rem;
+    padding: 3% 0;
+  }
+}
+
+
 .homePagePic {
   width: 450px;
   height: auto;
 }
 
 .homePagePic1 {
-
-    width: 250px;
-    height: auto;
-     display: block;
+  width: 250px;
+  height: auto;
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-    
 }
 
 .body {
   margin: 20 px;
   padding: 30 px;
-  /* background-color: rgb(222, 201, 173); */
-  /* background-image: linear-gradient(to bottom right, rgb(222, 201, 173), rgb(237, 236, 230), rgb(225, 145, 34)); */
-  /* min-height: 100vh; */
 }
 
 .frame {
-  /* border: 2px solid rgb(13, 12, 12);
-    box-shadow: 0 0 0 6px rgb(55, 53, 51); */
-  /* background-image: linear-gradient(to bottom right, rgb(222, 201, 173), rgb(237, 236, 230), rgb(240, 175, 84)); */
   background-image: linear-gradient(
     to bottom right,
     rgb(40, 40, 40),
-    /* rgb(11, 11, 11), */
     rgb(237, 236, 230),
     rgb(106, 104, 100)
   );
-
-  /* margin-left: 280px;
-  margin-right: 280px;
-  margin-bottom: 50px;
-  padding-left: 50px; */
-
 }
 
 .bioParagraph {
   padding-right: 20px;
   padding-left: 30px;
-   display: block;
+  display: block;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
@@ -52,35 +67,17 @@
 }
 
 .nav {
-  /* font-size: 10px;
-    padding-bottom: 5px;
-    font-family: monospace;
-    color: black; */
-  /* list-style-type: none; */
-  /* background-color: rgb(192, 192, 192); */
-   /* background-color: rgb(237, 230, 230); */
-   /* background-color: rgba(192, 191, 190, 0.323); */
   background-color: white;
   justify-content: space-between;
   font-family: monospace;
   font-weight: bolder;
   font-size: 20px;
-
 }
-
 
 .nav:link {
   text-decoration: none;
   color: black;
 }
-
-/* .btn {
-    .btn:focus {
-    outline: none !important;
-    outline-offset: none !important;
-}
-} */
-
 
 h2 {
   font-family: monospace;
@@ -98,8 +95,6 @@ h3 {
   color: rgb(106, 104, 100);
 }
 
-/* contact */
-
 .btnSVG {
   padding: 20px;
 }
@@ -110,20 +105,11 @@ h3 {
   padding-left: 75px;
 }
 
-/* .frameContact {
-  margin-top: 120px;
-} */
-
-/* blog */
-
 .card {
-  /* padding-left: 20px;
-    padding-right: 20px; */
   margin: 50px;
 }
 
 .card {
-  /* border-radius: 40%; */
   text-align: center;
   padding-bottom: 10px;
   border: 2px solid rgb(13, 12, 12);
@@ -137,13 +123,6 @@ h1 {
   padding-bottom: 20px;
 }
 
-/* .containerBlog{
-    background-image: url("/Css/blog post IMAGES/beige 3.jpeg");;
-    background-repeat: no-repeat;
-    background-size: cover;
-
-} */
-
 /* BIO */
 
 .bioParagraph {
@@ -154,9 +133,6 @@ h1 {
 /* blog */
 
 .frameBottom {
-
   padding-left: 25px;
   padding-right: 25px;
-
-
 }
