--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -31,7 +31,7 @@
     max-width: 150px;
   }
   .homePageFont {
-    font-size: 10px;
+    font-size: 13px;
     
   }
 }
@@ -123,6 +123,33 @@ h3 {
   font-family: monospace;
   color: rgb(106, 104, 100);
 }
+
+@media only screen and (max-width: 768px) {
+  .CardHeader {
+    font-size: 16px;   
+  }
+  .card-title {
+font-size: 14px;
+  }
+  .card-text {
+font-size: 12px;
+  }
+  .custom-btn {
+    font-size: 5px;     /* Adjusts the font size of the button */
+    padding: 3px 8px; 
+  }
+  .projectTitle {
+    font-size: 20px;
+  }
+}
+
+@media only screen and (min-width: 769px) {
+    .custom-btn2 {
+        font-size: 20px;      /* Increase the font size of the button */
+        padding: 15px 30px;  /* Increase the padding of the button */
+    }
+}
+
 
 .btnSVG {
   padding: 20px;
