--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -132,12 +132,13 @@ h3 {
     font-size: 20px;
   }
   .nav {
-    font-size: 9px;
-    line-height: 0.9;
+    font-size: 10px;
+    line-height: 1;
     padding-top: 12px;
   }
   .btnSVG:first-child {
-  margin-right: 10px;
+  margin-right: 18px;
+  margin-top: 5px;
   height: 15px;
   width: auto;
 }
