--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -1,4 +1,4 @@
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
   /* Styles for tablets and desktops */
   .homePagePic {
     max-width: 600px;
@@ -20,38 +20,12 @@
     padding: 3% 0;
   }
 }
-/* @media only screen and (max-width: 768px) {
-  .homePagePic {
-    max-width: 150px;
-  }
-  .homePageFont {
-    font-size: 13px;
-  }
-  .homePagePic1 {
-    max-height: 250px;
-  }
-} */
-
-/* .homePagePic {
-  width: 450px;
-  height: auto;
-} */
-
 .homePagePic {
   /* width: 100%;
   max-width: 450px; */
   width: 350px;
   height: auto;
 }
-
-/* .homePagePic1 {
-  width: 250px;
-  height: auto;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-} */
 
 .homePagePic1 {
   width: auto;
@@ -80,10 +54,13 @@
   font-family: monospace;
   font-weight: bolder;
   font-size: 1.2rem;
-  position: fixed;
+}
+
+.nav-container {
+  position: sticky;
   top: 0;
-  width: 100%;
-  z-index: 1000;
+  background-color: #ffffff; /* Customize this as needed */
+  z-index: 100; /* Adjust z-index to make sure it's above other content */
 }
 
 .nav:link {
@@ -108,7 +85,7 @@ h3 {
   color: rgb(106, 104, 100);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   .homePagePic {
     max-width: 150px;
   }
@@ -142,6 +119,12 @@ h3 {
     height: 15px;
     width: auto;
   }
+  .nav-container {
+  position: sticky;
+  top: 0;
+  background-color: #ffffff; /* Customize this as needed */
+  z-index: 100; /* Adjust z-index to make sure it's above other content */
+}
 }
 
 .btnSVG:first-child {
