--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -64,9 +64,9 @@
   100% {
     background-position: 0% 50%;
   } */
-  background: linear-gradient(283deg,#94949d,#c0c0d2,#6a6a71,#b4b4c2,#c5c6d0,#666771,#dcdded);
-  background-size: 420% 420%;
-  animation: gradient-animation 21s ease infinite;
+  background: linear-gradient(300deg,#aaaaaa,#bbbbbb,#cccccc,#dddddd,#909090,#636363);
+  background-size: 360% 360%;
+  animation: gradient-animation 12s ease infinite;
 }
 @keyframes gradient-animation {
   0% {
