--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -3,9 +3,6 @@
   .homePagePic {
     max-width: 600px;
   }
-  /* .bioParagraph {
-    font-size: 1.5rem;
-  } */
   .CardHeader {
     font-size: 3rem;
   }
@@ -21,10 +18,16 @@
   }
 }
 .homePagePic {
-  /* width: 100%;
-  max-width: 450px; */
   width: 350px;
   height: auto;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
+  transition: all 0.3s ease;
+}
+
+.homePagePic:hover {
+  transform: scale(1.05); /* Slightly enlarges the image on hover */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Enhances the shadow on hover */
 }
 
 .homePagePic1 {
@@ -32,6 +35,8 @@
   height: 450px;
   display: block;
   margin: 0 auto;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 15px;
 }
 
 .body {
@@ -49,22 +54,15 @@
 } */
 
 .frame {
-  /* background: linear-gradient(211deg, #282828, #94949d, #c0c0d2, #6a6a71, #b4b4c2);
-  background-size: 300% 300%;
-  animation: gradient-animation 5s ease infinite;
-}
-
-@keyframes gradient-animation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  } */
-  background: linear-gradient(300deg,#aaaaaa,#bbbbbb,#cccccc,#dddddd,#909090,#636363);
+  background: linear-gradient(
+    300deg,
+    #aaaaaa,
+    #bbbbbb,
+    #cccccc,
+    #dddddd,
+    #909090,
+    #636363
+  );
   background-size: 360% 360%;
   animation: gradient-animation 12s ease infinite;
 }
@@ -81,8 +79,10 @@
 }
 
 .nav {
+  /* display: flex; */
   background-color: white;
   justify-content: space-between;
+  align-items: center;
   font-family: monospace;
   font-weight: bolder;
   font-size: 1.2rem;
@@ -98,6 +98,17 @@
 .nav:link {
   text-decoration: none;
   color: black;
+}
+.nav-item {
+  /* text-align: center; */
+padding: 10px;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.nav-item:hover {
+  transform: scale(1.05); /* Slightly enlarges the image on hover */
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Enhances the shadow on hover */
 }
 
 h2 {
@@ -141,7 +152,7 @@ h3 {
   }
   .nav {
     font-size: 10px;
-    line-height: 1;
+    line-height: 1.2;
     padding-top: 12px;
   }
   .btnSVG:first-child {
@@ -151,12 +162,22 @@ h3 {
     height: 15px;
     width: auto;
   }
+  .btnSVG {
+    padding-left: 20px;
+    margin: 0px;
+    align-content: left;
+  }
   .nav-container {
-  position: sticky;
-  top: 0;
-  background-color: #ffffff; /* Customize this as needed */
-  z-index: 100; /* Adjust z-index to make sure it's above other content */
-}
+    position: sticky;
+    top: 0;
+    background-color: #ffffff; /* Customize this as needed */
+    z-index: 100; /* Adjust z-index to make sure it's above other content */
+  }
+  .nav-item {
+    text-align: left;
+    max-width: 30%; /* Adjust based on how much width you want it to take up */
+        /* margin: auto; */
+  }
 }
 
 .btnSVG:first-child {
@@ -200,6 +221,7 @@ h1 {
 .bioParagraph {
   font-size: 20px;
   font-family: monospace;
+  line-height: 2;
 }
 
 @media (max-width: 767px) {
