--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -18,7 +18,7 @@
   }
 }
 .homePagePic {
-  width: 350px;
+  width: 300px;
   height: auto;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
   border-radius: 15px;
@@ -54,6 +54,7 @@
 } */
 
 .frame {
+  border-radius: 20px;
   background: linear-gradient(
     300deg,
     #aaaaaa,
