update font size on highlights

--- a/portfolio/src/Css/Portfolio.css
+++ b/portfolio/src/Css/Portfolio.css
@@ -129,6 +129,10 @@ h3 {
   color: rgb(106, 104, 100);
 }
 
+.card-title {
+  text-decoration: underline;
+}
+
 @media only screen and (max-width: 1024px) {
   .homePagePic {
     max-width: 150px;
